--- a/stucampus/static/styles/index-pc.css
+++ b/stucampus/static/styles/index-pc.css
@@ -59,7 +59,7 @@
 .banner img{
 	position: absolute;
 	width: 45.533333rem;
-	height: 11.533333rem;
+	height: auto;
 	z-index: -1;
 }
 .banner_title{
@@ -173,15 +173,15 @@
     padding: 0.8rem 1.066667rem;
     height: 0.8rem;
 }
-.like-content img{
+.like-content span{
     position: absolute;
-    top: 0.8rem;
+    top: 0rem;
     height: 0.8rem;
     width: 0.8rem;
 }
 .like-content p{
     position: absolute;
-    top: 0.8rem;
+    top: 0rem;
     display: block;
     height: 0.8rem;
     max-width: 1.133333rem;
@@ -189,17 +189,34 @@
     line-height: 0.8rem;
     color: rgba(0,0,0,0.54);
 }
+.acomments{
+    position: absolute;
+    right: 3.46667rem;
+    width: 2.4rem;
+    height: 0.8rem;
+}
 .comment_img{
-    right: 6.533333rem;
+    left: 0rem;
+    background: url(/static/images/index/comment.png);
+    background-size: 100%;
 }
 .comment_p{
-    right: 5.0rem;
+    left: 1.2rem;
+}
+
+.aeyes{
+    position: absolute;
+    right: 1.06667rem;
+    width: 2.4rem;
+    height: 0.8rem;
 }
 .eye_img{
-    right: 2.6rem;
+    left: 0rem;
+    background :url(/static/images/index/eye.png);
+    background-size: 100%;
 }
 .eye_p{
-    right: 1.066667rem;
+    left: 1.2rem;
 }
 .left{
     float: left;
