--- a/stucampus/templates/index.html
+++ b/stucampus/templates/index.html
@@ -58,6 +58,11 @@
                 </a>
             </div>
         {% endfor %}
+        {% if important_articles.has_next %}
+        <!-- <div class="page_number">{{ important_articles.number }}</div> -->
+        {% else %}
+        <div class="page_number">没有更多文章了</div>
+        {% endif %}
         </div><!--end of cont_articles-->
 
         <div class="side-content">
