--- a/stucampus/templates/base.html
+++ b/stucampus/templates/base.html
@@ -84,6 +84,7 @@
     <div class="inner_content">
     {% block content %}
     {% endblock %}
+        <span class="copyright">版权所有 © 2001～2015 深圳大学学子天地 - 粤ICP备05008884号</span>
     </div><!--end of inner_content-->
 
 </div><!--end of inner_body-->
