优化主页一些显示问题

--- a/stucampus/static/styles/index-phone.css
+++ b/stucampus/static/styles/index-phone.css
@@ -218,5 +218,6 @@
     background-color: rgba(255,255,255,0.87);
     font-size: 0.8rem;
     line-height: 2rem;
+    font-family: "SourceHanSans-Regular","Roboto-Regular","Microsoft YaHei";
     text-align: center;
 }
