--- a/stucampus/static/styles/bases.css
+++ b/stucampus/static/styles/bases.css
@@ -4,7 +4,7 @@
 	margin: 0;
 }
 body{
-    background-color: #ddd;
+    background-color: #fafafa;
 }
 @media screen and (max-width: 767px){
 	@media screen and (max-width: 640px){
