添加评论框文案

--- a/stucampus/templates/articles/article-display.html
+++ b/stucampus/templates/articles/article-display.html
@@ -61,7 +61,7 @@
                 <hr />
                 <div class="add-comment">
                     <a class="backarticalfoot" href="javascript:void(0)"></a>
-                    <textarea class="addcomment"></textarea> 
+                    <textarea class="addcomment" placeholder="说点什么吧......"></textarea> 
                     <a class="submit" href="javascript:showIdentityBox()"></a>
                 </div>
             </div>
