--- a/stucampus/static/styles/articles/article-phone.css
+++ b/stucampus/static/styles/articles/article-phone.css
@@ -187,6 +187,9 @@
     width: 21.8rem;
     overflow: hidden;
 }
+.artical-text p span{
+	font-size: 0.933333rem !important;
+}
 .artical-text img{
     max-width: 90%;
     height: auto !important;
