--- a/stucampus/templates/index.html
+++ b/stucampus/templates/index.html
@@ -28,12 +28,10 @@
             <a  href="{% url 'articles:display' article.pk %}" style="left: 0rem;" >
                 <div class="blur">
                 </div>
-                <div class="infomation">
-                    <p class="banner_title">{{ article.title | truncatechars:19  }}</p>
-                    <p class="banner_describe">{{ article.summary }}</p>
-                    <p class="banner_category">{{ article.category }}</p>
-                </div>
-                <img src="{{ article.cover }}" alt="{{ article.title | truncatechars:19  }}" />
+                <p class="banner_title">{{ article.title | truncatechars:19  }}</p>
+                <p class="banner_describe">{{ article.summary }}</p>
+                <img src="{{ article.cover.url }}" alt="{{ article.title | truncatechars:19  }}" />
+                <p class="banner_category">{{ article.category }}</p>
             </a>
         {% endfor %}
         </div>
@@ -43,7 +41,7 @@
         {% for article in important_articles %}
             <div class="artical">
                 <a href="{% url 'articles:display' article.pk %}">
-                    <img class="a-pic" src="{{ article.cover }}">
+                    <img class="a-pic" src=" {{ article.cover.url }}">
                     <div class="a-content">
                         <span class="a-title">{{ article.title | truncatechars:19  }}</span>
                         <div class="a-info">
@@ -98,29 +96,33 @@
             <div class="side-card">
                 <div class="shadow">
                     <p class="card-title">最新评论</p>
-                    {% for comment in comments %}
-                    <div class="comment">
-                        <a href="{{comment.comment_author_url}}">
-                            <img src="{{ comment.comment_author_avatar_url }}" alt="{{ comment.comment_author_name }}" />
-                            <span>{{ comment.comment_author_name }}</span>
-                        </a>
-                        <p class="comment-source">{{ comment.comment_created_at }} 在 {{ comment.article_title }} 中评论:</p>
-                        <p class="comment-value">{{ comment.comment_content }}</p>
-                        <a href="{{ comment.article_url }}">进入文章查看全文</a>
-                    </div>
-                    {% endfor %}
+                    {% if comments %}
+                        {% for comment in comments %}
+                        <div class="comment">
+                            <a href="{{comment.comment_author_url}}">
+                                <img src="{{ comment.comment_author_avatar_url }}" alt="{{ comment.comment_author_name }}" />
+                                <span>{{ comment.comment_author_name }}</span>
+                            </a>
+                            <p class="comment-source">{{ comment.comment_created_at }} 在 {{ comment.article_title }} 中评论:</p>
+                            <p class="comment-value">{{ comment.comment_content }}</p>
+                            <a href="{{ comment.article_url }}">进入文章查看全文</a>
+                        </div>
+                        {% endfor %}
+                    {% endif %}
                 </div>
             </div>
             <div class="side-card">
                 <div class="shadow">
                     <p class="card-title">最近访客</p>
                     <div class="content">
-                        {% for visitor in visitors %}
-                        <a class="visitor" href="{{ visitor.url }}">
-                            <img src="{{ visitor.avatar_url }}" alt="{{ visitor.name }}" />
-                            <p>{{ visitor.name }}</p>
-                        </a>
-                        {% endfor %}
+                        {% if visitors %}
+                            {% for visitor in visitors %}
+                            <a class="visitor" href="{{ visitor.url }}">
+                                <img src="{{ visitor.avatar_url }}" alt="{{ visitor.name }}" />
+                                <p>{{ visitor.name }}</p>
+                            </a>
+                            {% endfor %}
+                        {% endif %}
                         
                     </div>
                 </div>
