--- a/stucampus/templates/ajax_article_list.html
+++ b/stucampus/templates/ajax_article_list.html
@@ -1,7 +1,9 @@
+
+{% load qiniu_tools %}
 {% for article in important_articles %}
 <div class="artical">
     <a href="{% url 'articles:display' article.pk %}">
-        <img class="a-pic" src="{{ article.cover }}">
+        <img class="a-pic" src="{{ article.cover.url | scale_qiniu_img:request}}">
         <div class="a-content">
             <span class="a-title">{{ article.title | truncatechars:19  }}</span>
             <div class="a-info">
