--- a/stucampus/templates/index.html
+++ b/stucampus/templates/index.html
@@ -19,6 +19,8 @@
 
 {% load py_utils %}
 
+{% load qiniu_tools %}
+
 {% block content %}
     <div class="banner">
         <div class="selector">
@@ -30,7 +32,7 @@
                 </div>
                 <p class="banner_title">{{ article.title | truncatechars:19  }}</p>
                 <p class="banner_describe">{{ article.summary }}</p>
-                <img src="{{ article.cover.url }}" alt="{{ article.title | truncatechars:19  }}" />
+                <img src="{{ article.cover.url | scale_qiniu_img:request}}" alt="{{ article.title | truncatechars:19  }}" />
                 <p class="banner_category">{{ article.category }}</p>
             </a>
         {% endfor %}
@@ -41,7 +43,7 @@
         {% for article in important_articles %}
             <div class="artical">
                 <a href="{% url 'articles:display' article.pk %}">
-                    <img class="a-pic" src=" {{ article.cover.url }}">
+                    <img class="a-pic" src=" {{ article.cover.url | scale_qiniu_img:request }}">
                     <div class="a-content">
                         <span class="a-title">{{ article.title | truncatechars:19  }}</span>
                         <div class="a-info">
